búa til leikarar.html

--- a/Verkefni_4/index.html
+++ b/Verkefni_4/index.html
@@ -4,14 +4,13 @@
 	<link rel="stylesheet" type="text/css" href="style/semantic.css">
 	<title>Revenge of the Sith</title>
 	<link rel="shortcut icon" href="myndir/icon.png">
-
 </head>
 <body>
   <div class="ui menu">
   <div class="header item">
     Star Wars: Episode III – Revenge of the Sith
   </div>
-  		<a class="item">
+  		<a class="item" href="leikarar.html">
     		Leikarar
   		</a>
   		<a class="item">
@@ -23,8 +22,8 @@
 		<h1> Wlecome </h1>
 	</div>
 
-	<div class="ui segment">
-		<p>Star Wars: Episode III – Revenge of the Sith is a 2005 American epic space opera film written and directed by George Lucas. It is the sixth entry of the Star Wars film series and stars Ewan McGregor, Natalie Portman, Hayden Christensen, Ian McDiarmid, Samuel L. Jackson, Christopher Lee, Anthony Daniels, Kenny Baker, and Frank Oz. A sequel to The Phantom Menace (1999) and Attack of the Clones (2002), the film is the final installment of the Star Wars prequel trilogy.
+	<div class="ui segment" style="font-size: 20px">
+		<p>Star Wars: Episode III – Revenge of the Sith is a 2005 American epic space opera film written and directed by George Lucas. It is the sixth entry of the Star Wars film series and stars Ewan McGregor, Natalie Portman, Hayden Christensen, Ian McDiarmid, Samuel L. Jackson, Christopher Lee, Anthony Daniels, Kenny Baker, and Frank Oz. A sequel to The Phantom Menace (1999) and Attack of the Clones (2002), the film is the final installment of the Star Wars prequel trilogy.<br>
 
 		The film begins three years after the onset of the Clone Wars. The Jedi Knights are spread across the galaxy, leading a massive war against the Separatists. The Jedi Council dispatches Jedi Master Obi-Wan Kenobi to eliminate the notorious General Grievous, leader of the Separatist Army. Meanwhile, Jedi Knight Anakin Skywalker grows close to Palpatine, the Supreme Chancellor of the Galactic Republic and, unknown to the public, a Sith Lord known as Darth Sidious. Their deepening friendship threatens the Jedi Order, the Republic, and Anakin himself.</p>
 	</div>
