--- a/Verkefni_4/index.html
+++ b/Verkefni_4/index.html
@@ -13,9 +13,9 @@
   		<a class="item" href="leikarar.html">
     		Leikarar
   		</a>
-  		<a class="item">
-   			Hafa samband
-  		</a>
+  		<a class="item" href="samband.html">
+        	Hafa samband
+     	</a>
 	</div>
 	
 	<div class="ui modal">
