--- a/Verkefni_4/leikarar.html
+++ b/Verkefni_4/leikarar.html
@@ -13,7 +13,7 @@
       <a class="item" href="leikarar.html">
         Leikarar
       </a>
-      <a class="item">
+      <a class="item" href="samband.html">
         Hafa samband
       </a>
   </div>
